make sure wide images aren't overflowing off of the feed, removing a console log

--- a/src/ui/src/app/post/post.component.css
+++ b/src/ui/src/app/post/post.component.css
@@ -33,5 +33,7 @@ button {
 
 .postImage{
   max-height: 300px;
+  max-width: 100%;
+  box-sizing: border-box;
   margin-top: 10px;
 }
